# CPP

./: .gitignore
is_prime_prog/: CMakeLists.txt  main.cpp  sources.cpp  sources.h  test.txt  tmpIsPrime.a7d372
selection_sort/: CMakeLists.txt  my_sort.hpp
selection_sort_file/: main.cc  my_sort.hpp  sort_file.hpp
selection_sort_file_meta/: CMakeLists.txt  main.cc  my_sort.hpp  sort_file.hpp
set_functions/: :  CMakeLists.txt  main.cc  set_operations.hpp
